fixed bugs in keydown handler

--- a/connect.css
+++ b/connect.css
@@ -1,9 +1,9 @@
-.grid  {
+.grid {
     width: 714px;
     height: 714px;
     border-left: solid black 5px;
     border-right: solid black 5px;
-    border-bottom: solid black 5px;;
+    border-bottom: solid black 5px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -14,31 +14,7 @@
     border: solid black 1px;
 }
 
-.square:nth-child(1) {
-    border-bottom: solid black 5px;
-}
-
-.square:nth-child(2) {
-    border-bottom: solid black 5px;
-}
-
-.square:nth-child(3) {
-    border-bottom: solid black 5px;
-}
-
-.square:nth-child(4) {
-    border-bottom: solid black 5px;
-}
-
-.square:nth-child(5) {
-    border-bottom: solid black 5px;
-}
-
-.square:nth-child(6) {
-    border-bottom: solid black 5px;
-}
-
-.square:nth-child(7) {
+.square:nth-child(-n+7) {
     border-bottom: solid black 5px;
 }
 
@@ -46,12 +22,13 @@
     width: 100px;
     height: 100px;
     border: none;
+    display: inline-block;
 
 }
 
 .red {
     background-color: red;
-    
+
 }
 
 .yellow {
